--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
   <div class="contenedor-ruleta"><div class="ruleta"></div> </div>
+  <div id="popupResultado" class="popup">
+    <h3 id="resultadoSlot"></h3>
+    <button id="cerrarPopup">-X-</button>
+  </div>
 </body>
 <script src="main.js"></script>
 </html>
