--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <div class="contenedor-ruleta"><div class="ruleta"></div> </div>
   <div id="popupResultado" class="popup">
     <h3 id="resultadoSlot"></h3>
-    <button id="cerrarPopup">-X-</button>
+    <button id="cerrarPopup">Close</button>
   </div>
 </body>
 <script src="main.js"></script>
